--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "body-parser": "^1.18.2",
     "dotenv": "^7.0.0",
     "express": "^4.16.2",
-    "mongoose": "^5.0.6"
+    "mongoose": "^5.0.6",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
