--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^7.0.0",
     "express": "^4.16.2",
     "mongoose": "^5.0.6",
+    "node-cron": "^2.0.3",
     "winston": "^3.2.1"
   },
   "devDependencies": {
